Editor overflow and size fixes

--- a/public/global.css
+++ b/public/global.css
@@ -55,6 +55,7 @@ textarea {
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 2px;
+  resize: vertical;
 }
 
 input:disabled {
